--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,13 @@
 
     <modelVersion>4.0.0</modelVersion>
 
+    <parent>
+        <groupId>net.wasdev.wlp.maven.parent</groupId>
+        <artifactId>liberty-maven-app-parent</artifactId>
+        <version>2.6.4</version>
+        <relativePath></relativePath>
+    </parent>
+
     <groupId>dev.appsody.starter.java-openliberty</groupId>
     <artifactId>starter-app</artifactId>
     <version>1.0-SNAPSHOT</version>
