--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,18 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
+        <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>io.openliberty.features</groupId>
+                <artifactId>features-bom</artifactId>
+                <version>19.0.0.12</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
     <dependencies>
         <!-- Aggregate of MicroProfile APIs -->
         <dependency>
