--- a/pom.xml
+++ b/pom.xml
@@ -5,17 +5,51 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <parent><!--required parent POM-->
-        <groupId>dev.appsody</groupId>
-        <artifactId>java-microprofile</artifactId>
-        <version>[0.2, 0.3)</version>
-        <relativePath/>
+    <parent>
+        <groupId>net.wasdev.wlp.maven.parent</groupId>
+        <artifactId>liberty-maven-app-parent</artifactId>
+        <version>2.6.4</version>
+        <relativePath></relativePath>
     </parent>
 
     <groupId>dev.appsody.starter.java-microprofile</groupId>
     <artifactId>starter-app</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
+
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <!-- Plugins -->
+        <version.maven-war-plugin>3.2.2</version.maven-war-plugin>
+        <version.dockerfile-maven-plugin>1.4.10</version.dockerfile-maven-plugin>
+        <version.maven-surefire-plugin>3.0.0-M1</version.maven-surefire-plugin>
+        <version.maven-failsafe-plugin>3.0.0-M1</version.maven-failsafe-plugin>
+        <!-- OpenLiberty runtime -->
+        <liberty.groupId>io.openliberty</liberty.groupId>
+        <liberty.artifactId>openliberty-runtime</liberty.artifactId>
+        <version.openliberty-runtime>19.0.0.8</version.openliberty-runtime>
+        <http.port>9080</http.port>
+        <https.port>9443</https.port>
+        <packaging.type>usr</packaging.type>
+        <app.name>${project.artifactId}</app.name>
+        <package.file>${project.build.directory}/${app.name}.zip</package.file>
+    </properties>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>io.openliberty.features</groupId>
+                <artifactId>features-bom</artifactId>
+                <version>${version.openliberty-runtime}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
     <dependencies>
         <!-- Open Liberty Features -->
